styles/main.css
/* ... */
#webGrooveboxThumb {
    background-image: url('../img/GrooveboxSynthSmall.png');

}

#ekholmsnasThumb {
    background-image: url('../img/ekholmsnasbacken1Small.png');
}

#tinyGrandPrixThumb {
    background-image: url('../img/TinyGrandPrixGameshot2Small.png');
}

.button,
#formSubmit {
    display: block;
    background-color: rgb(218, 238, 255);
    font-size: 2rem;
    color: rgb(70, 67, 108);
    border: 1px solid rgb(73, 73, 73);
    padding: 2rem;
    text-align: center;
    border-radius: 2rem;
    margin: 3rem 0;
    width: 100%;

}

.button:hover,
#formSubmit:hover {

    background-color: rgb(70, 67, 108);
    color: rgb(218, 238, 255);

}

.tech-grid {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;


}

.tech-grid a {

    width: max-content;
    align-items: center;
    justify-content: center;
    text-align: center;
}



.tech-logo {
    object-fit: cover;
    max-width: 75%;
    max-height: 75%;

}

#formMessage {
    display: block;
    width: 100%;
    height: 30rem;
    border-radius: 0.7rem;
    margin-bottom: 2rem;
    writing-mode: horizontal-tb;
}

#formName,
#formEmail {
    width: 100%;
    height: 3rem;
    border-radius: 0.5rem;
    margin-bottom: 1rem;
}

.job-title {
    display: block;
    font-weight: bold;
    margin-bottom: 1rem;
}

@media screen and (max-width: 767px) {

    nav li {
        border-bottom: 0.1rem solid rgb(183, 193, 202);
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

}

@media screen and (min-width: 768px) {

    .button,
    #formSubmit {
        display: inline-block;
        padding: 1rem;
        border-radius: 1rem;
        margin: 0;
        width: fit-content;
    }

    .tech-logo {
        max-width: 50%;
        max-height: 50%;
    }

    .tech-logo:hover {
        transform: scale(1.2);

    }

    .card-box {
        flex-direction: row;
    }

    .card {
        width: 40%;
        margin: 0 2rem;
    }

    .card:hover {
        transform: scale(1.1);

    }

    nav ul {
        flex-direction: row;
        justify-content: center;
        align-items: end;
        margin: auto;
    }

    nav li {
        margin-left: 1.5rem;
    }

    section {
        width: 80%;
        max-width: 960px;
        margin: 3rem auto 6rem auto;
    }

    .popup-sidebar {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(2, 1fr);
    }

    .popup-text {
        display: grid;
        gap: 2rem;
        grid-template-columns: 2fr 1fr;
        grid-template-rows: 1fr;
    }

    .popup-screenshots {
        border-top: 0.1rem solid rgb(183, 193, 202);
        grid-template-columns: repeat(3, 1fr);
        min-height: 10rem;
        padding-top: 2rem;
    }

    .popup aside {
        border-left: 0.1rem solid rgb(183, 193, 202);
        padding-left: 2rem;
    }

}


@media screen and (min-width: 900px) {



    .tech-logo {
        max-width: 40%;
        max-height: 40%;
    }

    .nav-mobile {
        display: none;

    }

    .nav-desktop {
        display: flex;
        margin-right: 2rem;
        min-width: fit-content;
        background: none;
    }

    .nav-desktop ul {
        background: none;
    }

    .menuIcon {
        display: none;
    }

}

@media (prefers-color-scheme: dark) {

    a:link {
        color: rgb(0, 102, 255)
    }

    a:visited {
        color: rgb(185, 71, 185)
    }



    h1 {

        color: rgb(157, 198, 233);
    }

    h2,
    h3,
    h4 {

        color: rgb(173, 197, 218);
    }



    body {
        background-color: rgb(30, 29, 34);
        color: rgb(206, 211, 217);
    }

    header {
        background-color: rgba(56, 55, 63, 0.847);
        backdrop-filter: blur(5px);
        border-bottom: 0.1rem solid rgb(183, 193, 202);
    }

    footer {
        color: rgb(70, 67, 108);
        background-color: rgba(56, 55, 63, 0.847);
        backdrop-filter: blur(5px);
        border-top: 0.1rem solid rgb(183, 193, 202);
    }

    .copyright {
        color: rgb(173, 197, 218);
    }

    .menuIcon {
        background-color: rgb(67, 64, 80);
        border: 0.1em solid rgb(182, 201, 218);
    }

    .menuBar {
        background-color: rgb(182, 201, 218);
    }

    .menuIcon:hover .menuBar {
        background-color: aliceblue;
    }

    .menuIcon:hover {
        border: 0.1em solid aliceblue;
    }

    .popup-close-icon {
        border: 1px solid rgb(182, 201, 218);
    }

    .popup-close-icon:hover {
        border: 1px solid aliceblue;
    }

    .close-icon-svg {
        stroke: rgb(182, 201, 218);
    }

    .close-icon-svg:hover {
        stroke: aliceblue;
    }

    .popup-close-icon-screenshot {
        background-color: rgba(56, 55, 63, 0.847);
    }

    .christoffer-gylin-logo {
        stroke: rgb(173, 197, 218);
        fill: rgb(173, 197, 218);
    }

    .linkedin-logo,
    .github-logo,
    .email-logo {
        fill: rgb(182, 201, 218);
    }

    .linkedin-logo:hover,
    .github-logo:hover,
    .email-logo:hover {
        fill: aliceblue;
    }

    nav a,
    nav a:visited {
        color: rgb(182, 201, 218);
    }

    nav a:hover,
    nav a:focus {
        color: aliceblue;
    }

    .nav-mobile {


        background-color: rgba(56, 55, 63, 0.847);
        ;

    }


    .currentPageListItem a,
    .currentPageListItem a:visited {
        color: aliceblue;
    }

    .card {

        border: 1px solid aliceblue;
    }

    .button,
    #formSubmit {
        background-color: rgb(40, 40, 62);
        color: rgb(218, 238, 255);
        border: 1px solid rgb(218, 238, 255);
    }

    .button:hover,
    #formSubmit:hover {

        background-color: rgb(218, 238, 255);
        color: rgb(40, 40, 62);

    }

    .popup {
        background-color: rgba(56, 55, 63, 0.936);
        border: 0.1rem solid rgb(183, 193, 202);
    }
}

.menu-hidden {

    display: none;
}

